Added branch info(name and address) on get appointment api
